style(java): apply backend formatter
Apply the pinned Spotless + Palantir Java Format baseline across backend production Java sources.